--- a/index.html
+++ b/index.html
@@ -75,20 +75,37 @@
 
 <section id="about">
     <h2>About Me</h2>
-    <p>I am a Spring developer with experience in building and managing applications. Here you can see some of the projects I have worked on.</p>
+    <p>I'm a software engineer (backend Focus) passionate about building secure, scalable, and well-architected systems using Java, Spring Boot, and Spring Framework.
+
+I design clean REST APIs, implement JWT-based RBAC authentication (with Auth0), and structure code for long-term maintainability. My skill set includes SQL, Docker, Swagger, and a strong focus on data validation, exception handling, and automated testing (unit and integration).
+
+I also leverage GitHub Actions to automate CI workflows, ensuring code quality and continuous delivery.
+
+I'm always striving to write clean, reliable code that supports real-world business logic and grows with the product.</p>
 </section>
 
 <section id="projects">
     <h2>Projects</h2>
     <div class="project">
-        <h3>Project 1: Employee Task Manager</h3>
-        <p>This project is a Spring Boot application integrated with a MySQL database. The application
-            manages two main entities: Employee and Task, with a one-to-many relationship between them.
-            Additionally, it handles the authentication and authorization process using a User and Role
-            relationship, implemented as a many-to-many association. The presentation layer is built using
-            Thymeleaf, facilitating server-side data rendering.</p>
+        <h3>Project 1: Digital Library Management System</h3>
+        <p>This project showcases the complete process of containerizing, deploying, and performance testing a digital library application using Docker and AWS Fargate.
+
+Project Steps:
+
+1️⃣ Dockerization – Creating a Docker container for the application.
+2️⃣ Pushing to Docker Hub – Uploading the Docker image to Docker Hub Registry.
+3️⃣ AWS Fargate Setup – Deploying the application on a serverless infrastructure.
+4️⃣ Load Balancer Configuration – Setting up an Application Load Balancer (ALB).
+5️⃣ Database Setup (Amazon RDS) – Configuring a scalable MySQL database on AWS.
+6️⃣ Deploying the Application – Running and managing tasks on AWS Fargate.
+7️⃣ Testing with 50 Requests – Simulating high traffic using Apache Benchmark & JMeter.
+8️⃣ Performance Analysis – Optimizing response time and system scalability.
+9️⃣ Performance Enhancements – Implementing Hikari Connection Pooling & Indexing to improve database query performance and handle concurrent connections efficiently.
+
+🔹 Tech Stack: Spring Boot, MySQL, Docker, AWS Fargate, RDS, ALB, Apache JMeter.
+🔹 Goal: Achieve a scalable, efficient, and highly available backend infrastructure.</p>
         <video controls>
-            <source src="https://www.dropbox.com/scl/fi/14vs1p2a58nadtm9v9zwl/employee-tasks.mp4?rlkey=9a10v9vctqm6cu2e6b9dret9e&st=nyeg5zan&dl=1" type="video/mp4">
+            <source src="https://www.dropbox.com/scl/fi/j7or1sax2p200mx3tw4o3/Digital-Library-Management-System.mp4?rlkey=gn816tm9nkz8oeaws0x9d6w5u&st=a2ovgjum&dl=1" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
