--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
   <section id="contact">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:ahmadkadri@web.de">ahmadkadri@web.de</a></p>
-    <p>GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/ahmadkadri978</a></p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/kadri-ahmad</a></p>
+    <p>GitHub: <a href="https://github.com/ahmadkadri978" target="_blank">github.com/ahmadkadri978</a></p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/kadri-ahmad" target="_blank">linkedin.com/in/kadri-ahmad</a></p>
   </section>
 
   <footer>
