--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ahmad Kadri | Spring Developer</title>
+  <title>Ahmad Kadri | Backend Architect 
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
     * {
@@ -75,7 +75,7 @@
 </head>
 <body>
   <header>
-    <h1>Ahmad Kadri - Software Engineer (Backend)</h1>
+    <h1>Ahmad Kadri - Backend Architect </h1>
     <nav>
       <ul>
         <li><a href="#about">About</a></li>
