--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Ahmad Kadri | Software Engineer (Backend) Portfolio</p>
+    <p>&copy; 2025 Ahmad Kadri | Backend Architect Portfolio</p>
   </footer>
 </body>
 </html>
