--- a/index.html
+++ b/index.html
@@ -91,6 +91,22 @@
     <p>My toolkit includes REST APIs, JWT-based Auth (Auth0), SQL, Docker, Swagger, CI/CD (GitHub Actions), and deep care for validation, exception handling, and testing (unit & integration).</p>
     <p>I architect systems that align with real-world business needs and grow with the product.</p>
   </section>
+  <section id="skills">
+  <h2>Skills</h2>
+  <ul style="display: flex; flex-wrap: wrap; gap: 1rem; list-style: none; padding: 0; margin-top: 1rem;">
+    <li style="background: #1e1e2f; color: white; padding: 0.5rem 1rem; border-radius: 20px;">Java</li>
+    <li style="background: #1e1e2f; color: white; padding: 0.5rem 1rem; border-radius: 20px;">Spring Boot</li>
+    <li style="background: #1e1e2f; color: white; padding: 0.5rem 1rem; border-radius: 20px;">Spring Security</li>
+    <li style="background: #1e1e2f; color: white; padding: 0.5rem 1rem; border-radius: 20px;">JWT / Auth0</li>
+    <li style="background: #1e1e2f; color: white; padding: 0.5rem 1rem; border-radius: 20px;">REST APIs</li>
+    <li style="background: #1e1e2f; color: white; padding: 0.5rem 1rem; border-radius: 20px;">Docker</li>
+    <li style="background: #1e1e2f; color: white; padding: 0.5rem 1rem; border-radius: 20px;">MySQL</li>
+    <li style="background: #1e1e2f; color: white; padding: 0.5rem 1rem; border-radius: 20px;">JPA / Hibernate</li>
+    <li style="background: #1e1e2f; color: white; padding: 0.5rem 1rem; border-radius: 20px;">Swagger</li>
+    <li style="background: #1e1e2f; color: white; padding: 0.5rem 1rem; border-radius: 20px;">JMeter</li>
+    <li style="background: #1e1e2f; color: white; padding: 0.5rem 1rem; border-radius: 20px;">CI/CD (GitHub Actions)</li>
+  </ul>
+  </section>
 
   <section id="projects">
     <h2>Projects</h2>
