--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
     <p>I architect systems that align with real-world business needs and grow with the product.</p>
   </section>
   <section id="skills">
+  <section id="skills">
   <h2>Skills</h2>
   <ul style="display: flex; flex-wrap: wrap; gap: 1rem; list-style: none; padding: 0; margin-top: 1rem;">
     <li style="background: #1e1e2f; color: white; padding: 0.5rem 1rem; border-radius: 20px;">Java</li>
@@ -105,6 +106,8 @@
     <li style="background: #1e1e2f; color: white; padding: 0.5rem 1rem; border-radius: 20px;">Swagger</li>
     <li style="background: #1e1e2f; color: white; padding: 0.5rem 1rem; border-radius: 20px;">JMeter</li>
     <li style="background: #1e1e2f; color: white; padding: 0.5rem 1rem; border-radius: 20px;">CI/CD (GitHub Actions)</li>
+    <li style="background: #1e1e2f; color: white; padding: 0.5rem 1rem; border-radius: 20px;">Unit Testing (JUnit)</li>
+    <li style="background: #1e1e2f; color: white; padding: 0.5rem 1rem; border-radius: 20px;">Integration Testing (MockMvc)</li>
   </ul>
   </section>
 
