--- a/index.html
+++ b/index.html
@@ -61,6 +61,19 @@
       border-radius: 8px;
       margin-top: 1rem;
     }
+    .project-link {
+  display: inline-block;
+  margin-top: 0.8rem;
+  background-color: #0077cc;
+  color: white;
+  padding: 0.4rem 1rem;
+  border-radius: 5px;
+  text-decoration: none;
+  font-weight: bold;
+}
+.project-link:hover {
+  background-color: #005fa3;
+}
     footer {
       background: #1e1e2f;
       color: #fff;
@@ -112,29 +125,30 @@
   </section>
 
   <section id="projects">
-    <h2>Projects</h2>
+  <h2>Projects</h2>
 
-    <div class="project">
-      <h3>Digital Library Management System</h3>
-      <p>A complete backend infrastructure project including Docker, AWS Fargate deployment, MySQL RDS, Load Balancer, and performance testing using JMeter.</p>
-      <p><strong>Tech Stack:</strong> Spring Boot, Docker, AWS, MySQL, Apache JMeter</p>
-      <video controls>
-        <source src="https://www.dropbox.com/scl/fi/j7or1sax2p200mx3tw4o3/Digital-Library-Management-System.mp4?rlkey=gn816tm9nkz8oeaws0x9d6w5u&st=a2ovgjum&dl=1" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
-    </div>
+  <div class="project">
+    <h3>Digital Library Management System</h3>
+    <p>A complete backend infrastructure project including Docker, AWS Fargate deployment, MySQL RDS, Load Balancer, and performance testing using JMeter.</p>
+    <p><strong>Tech Stack:</strong> Spring Boot, Docker, AWS, MySQL, Apache JMeter</p>
+    <video controls>
+      <source src="https://www.dropbox.com/scl/fi/j7or1sax2p200mx3tw4o3/Digital-Library-Management-System.mp4?rlkey=gn816tm9nkz8oeaws0x9d6w5u&st=a2ovgjum&dl=1" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+    <p><a class="project-link" href="https://github.com/ahmadkadri978/digital-library-system" target="_blank">🔗 View Source Code on GitHub</a></p>
+  </div>
 
-    <div class="project">
-      <h3>Bookstore Application</h3>
-      <p>A responsive bookstore application built with Spring Boot and Thymeleaf. Features include secure login, book catalog, and adaptive design for all devices.</p>
-      <p><strong>Tech Stack:</strong> Spring Boot, Thymeleaf, Spring Security</p>
-      <video controls>
-        <source src="https://www.dropbox.com/scl/fi/2gv8fkvnh0iwffj9sxnff/my-book-store.mp4?rlkey=9a9er9llicfdmdyhsiiyqizdg&st=4eqlcdhr&dl=1" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
-    </div>
-
-  </section>
+  <div class="project">
+    <h3>Bookstore Application</h3>
+    <p>A responsive bookstore application built with Spring Boot and Thymeleaf. Features include secure login, book catalog, and adaptive design for all devices.</p>
+    <p><strong>Tech Stack:</strong> Spring Boot, Thymeleaf, Spring Security</p>
+    <video controls>
+      <source src="https://www.dropbox.com/scl/fi/2gv8fkvnh0iwffj9sxnff/my-book-store.mp4?rlkey=9a9er9llicfdmdyhsiiyqizdg&st=4eqlcdhr&dl=1" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+    <p><a class="project-link" href="https://github.com/ahmadkadri978/bookstore-app" target="_blank">🔗 View Source Code on GitHub</a></p>
+  </div>
+</section>
 
   <section id="contact">
     <h2>Contact</h2>
