--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
       margin-bottom: 2rem;
     }
+    .project img {
+  transition: transform 0.3s ease;
+}
+.project img:hover {
+  transform: scale(1.03);
+}
+
     video {
       width: 100%;
       border-radius: 8px;
@@ -138,6 +145,20 @@
     </video>
     <p><a class="project-link" href="https://github.com/ahmadkadri978/Digital-Library-Management-System" target="_blank">🔗 View Source Code on GitHub</a></p>
   </div>
+  <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 1rem; margin-top: 1rem;">
+  <img src="Home-page.jpg" alt="Home Page" style="width: 100%; border-radius: 8px;" />
+  <img src="books-page.jpg" alt="Books Page" style="width: 100%; border-radius: 8px;" />
+  <img src="search-page.jpg" alt="Search Page" style="width: 100%; border-radius: 8px;" />
+  <img src="reservations-page.jpg" alt="Reservations Page" style="width: 100%; border-radius: 8px;" />
+  <img src="duplicated-reservation-error.jpg" alt="Reservations Page" style="width: 100%; border-radius: 8px;" />
+  <img src="reservations-admin-page.jpg" alt="Admin Reservations Page" style="width: 100%; border-radius: 8px;" />
+  <img src="admin-books-page.jpg" alt="Admin Books Page" style="width: 100%; border-radius: 8px;" />
+  <img src="admin-add-book-page.jpg" alt="Add Book Page" style="width: 100%; border-radius: 8px;" />
+  <img src="admin-edit-book-page.jpg" alt="Edit Book Page" style="width: 100%; border-radius: 8px;" />
+  <img src="admin-Manage-users-page.jpg" alt="Manage Users Page" style="width: 100%; border-radius: 8px;" />
+  <img src="profile-page.jpg" alt="User Profile Page" style="width: 100%; border-radius: 8px;" />  
+</div>
+
 
   <div class="project">
     <h3>Bookstore Application</h3>
