--- a/index.html
+++ b/index.html
@@ -173,14 +173,14 @@
 <div class="screenshots-grid">
   <div class="screenshot-item">
     <p>Login Page</p>
-    <a href="images/login-page.png" target="_blank">
-      <img src="images/login-page.png" alt="Login Page Screenshot" />
+    <a href="login-page.png" target="_blank">
+      <img src="login-page.png" alt="Login Page Screenshot" />
     </a>
   </div>
   <div class="screenshot-item">
     <p>Books List</p>
-    <a href="images/books-page.jpg" target="_blank">
-      <img src="images/books-page.jpg" alt="Books List Screenshot" />
+    <a href="books-page.jpg" target="_blank">
+      <img src="books-page.jpg" alt="Books List Screenshot" />
     </a>
   </div>
   <div class="screenshot-item">
