--- a/index.html
+++ b/index.html
@@ -159,93 +159,48 @@
   <section id="projects">
   <h2>Projects</h2>
 
+  <!-- Digital Library Project -->
   <div class="project">
-    <h3>Digital Library Management System</h3>
+    <h3>📚 Digital Library Management System</h3>
     <p>A complete backend infrastructure project including Docker, AWS Fargate deployment, MySQL RDS, Load Balancer, and performance testing using JMeter.</p>
-    <p><strong>Tech Stack:</strong> Spring Boot, Docker, AWS, MySQL, Apache JMeter</p>
+    <p><strong>Tech Stack:</strong> Spring Boot, Spring Security, OAuth2, Redis, Docker, AWS, MySQL, Apache JMeter</p>
+
     <video controls>
       <source src="https://www.dropbox.com/scl/fi/j7or1sax2p200mx3tw4o3/Digital-Library-Management-System.mp4?rlkey=gn816tm9nkz8oeaws0x9d6w5u&st=a2ovgjum&dl=1" type="video/mp4">
       Your browser does not support the video tag.
     </video>
+
     <p><a class="project-link" href="https://github.com/ahmadkadri978/Digital-Library-Management-System" target="_blank">🔗 View Source Code on GitHub</a></p>
   </div>
-    <h3>Screenshots</h3>
-<div class="screenshots-grid">
-  <div class="screenshot-item">
-    <p>Login Page</p>
-    <a href="login-page.png" target="_blank">
-      <img src="login-page.png" alt="Login Page Screenshot" />
-    </a>
-  </div>
-  <div class="screenshot-item">
-    <p>Books List</p>
-    <a href="books-page.jpg" target="_blank">
-      <img src="books-page.jpg" alt="Books List Screenshot" />
-    </a>
-  </div>
-  <div class="screenshot-item">
-    <p>Search Books</p>
-    <a href="search-page.jpg" target="_blank">
-      <img src="search-page.jpg" alt="Search Books Screenshot" />
-    </a>
-  </div>
-  <div class="screenshot-item">
-    <p>My Reservations (User)</p>
-    <a href="reservations-page.jpg" target="_blank">
-      <img src="reservations-page.jpg" alt="User Reservations Screenshot" />
-    </a>
-  </div>
-  <div class="screenshot-item">
-    <p>Duplicated Reservations</p>
-    <a href="reservations-page.jpg" target="_blank">
-      <img src="duplicated-reservations-error.jpg" alt="duplicated reservations Screenshot" />
-    </a>
-  </div>
-  <div class="screenshot-item">
-    <p>Admin - Reservations</p>
-    <a href="reservations-page.jpg" target="_blank">
-      <img src="reservations-admin-page.jpg" alt="reservations admin Screenshot" />
-    </a>
-  </div>
-  <div class="screenshot-item">
-    <p>Admin - Manage Books</p>
-    <a href="admin-books-page.jpg" target="_blank">
-      <img src="admin-books-page.jpg" alt="Admin Books Screenshot" />
-    </a>
-  </div>
-  <div class="screenshot-item">
-    <p>Admin - Add Book</p>
-    <a href="images/admin-add-book-page.jpg" target="_blank">
-      <img src="images/admin-add-book-page.jpg" alt="Admin Add Book Screenshot" />
-    </a>
-  </div>
-  <div class="screenshot-item">
-    <p>Admin - Edit Book</p>
-    <a href="admin-edit-book-page.jpg" target="_blank">
-      <img src="admin-edit-book-page.jpg" alt="Admin Edit Book Screenshot" />
-    </a>
-  </div>
-  
-  <div class="screenshot-item">
-    <p>Admin - Manage Users</p>
-    <a href="admin-Manage-users-page.jpg" target="_blank">
-      <img src="admin-Manage-users-page.jpg" alt="Manage Users Screenshot" />
-    </a>
-  </div>
-</div>
 
+  <!-- Screenshots Gallery -->
+  <h3 style="margin-top: 2rem;">📸 Screenshots</h3>
+  <div class="screenshots-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1rem; margin-top: 1rem;">
+    <div><p>Login Page</p><img src="Home-page.png" alt="Home" style="width:100%; border-radius:8px;"></div>
+    <div><p>Books List</p><img src="books-page.jpg" alt="Books List" style="width:100%; border-radius:8px;"></div>
+    <div><p>Search Books</p><img src="search-page.jpg" alt="Search" style="width:100%; border-radius:8px;"></div>
+    <div><p>My Reservations (User)</p><img src="reservations-page.jpg" alt="User Reservations" style="width:100%; border-radius:8px;"></div>
+    <div><p>Duplicate Reservation Error</p><img src="duplicated-reservations-error.jpg" alt="Error" style="width:100%; border-radius:8px;"></div>
+    <div><p>Admin - Reservations</p><img src="reservations-admin-page.jpg" alt="Admin Reservations" style="width:100%; border-radius:8px;"></div>
+    <div><p>Admin - Manage Books</p><img src="admin-books-page.jpg" alt="Admin Books" style="width:100%; border-radius:8px;"></div>
+    <div><p>Admin - Add Book</p><img src="admin-add-book-page.jpg" alt="Add Book" style="width:100%; border-radius:8px;"></div>
+    <div><p>Admin - Edit Book</p><img src="admin-edit-book-page.jpg" alt="Edit Book" style="width:100%; border-radius:8px;"></div>
+    <div><p>Admin - Manage Users</p><img src="admin-Manage-users-page.jpg" alt="Manage Users" style="width:100%; border-radius:8px;"></div>
+  </div>
 
-
-  <div class="project">
-    <h3>Bookstore Application</h3>
+  <!-- Bookstore Project -->
+  <div class="project" style="margin-top: 3rem;">
+    <h3>📖 Bookstore Application</h3>
     <p>A responsive bookstore application built with Spring Boot and Thymeleaf. Features include secure login, book catalog, and adaptive design for all devices.</p>
     <p><strong>Tech Stack:</strong> Spring Boot, Thymeleaf, Spring Security</p>
+
     <video controls>
       <source src="https://www.dropbox.com/scl/fi/2gv8fkvnh0iwffj9sxnff/my-book-store.mp4?rlkey=9a9er9llicfdmdyhsiiyqizdg&st=4eqlcdhr&dl=1" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
 </section>
+
 
   <section id="contact">
     <h2>Contact</h2>
