--- a/index.html
+++ b/index.html
@@ -176,11 +176,11 @@
   <!-- Screenshots Gallery -->
   <h3 style="margin-top: 2rem;">📸 Screenshots</h3>
   <div class="screenshots-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1rem; margin-top: 1rem;">
-    <div><p>Login Page</p><img src="Home-page.png" alt="Home" style="width:100%; border-radius:8px;"></div>
+    <div><p>Home Page</p><img src="Home-page.jpg" alt="Home" style="width:100%; border-radius:8px;"></div>
     <div><p>Books List</p><img src="books-page.jpg" alt="Books List" style="width:100%; border-radius:8px;"></div>
     <div><p>Search Books</p><img src="search-page.jpg" alt="Search" style="width:100%; border-radius:8px;"></div>
     <div><p>My Reservations (User)</p><img src="reservations-page.jpg" alt="User Reservations" style="width:100%; border-radius:8px;"></div>
-    <div><p>Duplicate Reservation Error</p><img src="duplicated-reservations-error.jpg" alt="Error" style="width:100%; border-radius:8px;"></div>
+    <div><p>Duplicate Reservation Error</p><img src="duplicated-reservation-error.jpg" alt="Error" style="width:100%; border-radius:8px;"></div>
     <div><p>Admin - Reservations</p><img src="reservations-admin-page.jpg" alt="Admin Reservations" style="width:100%; border-radius:8px;"></div>
     <div><p>Admin - Manage Books</p><img src="admin-books-page.jpg" alt="Admin Books" style="width:100%; border-radius:8px;"></div>
     <div><p>Admin - Add Book</p><img src="admin-add-book-page.jpg" alt="Add Book" style="width:100%; border-radius:8px;"></div>
