--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 <body>
   <header>
     <h1>Ahmad Kadri - Backend Architect </h1>
-    <img src="ahmade.jpg" alt="Ahmad Kadri Photo" style="width: 120px; height: 120px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem; border: 3px solid white;">
+    <img src="ahmad.jpg" alt="Ahmad Kadri Photo" style="width: 120px; height: 120px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem; border: 3px solid white;">
     <nav>
       <ul>
         <li><a href="#about">About</a></li>
