--- a/index.html
+++ b/index.html
@@ -56,6 +56,20 @@
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
       margin-bottom: 2rem;
     }
+    .project-link {
+  display: inline-block;
+  margin-top: 0.8rem;
+  background-color: #0077cc;
+  color: white;
+  padding: 0.4rem 1rem;
+  border-radius: 5px;
+  text-decoration: none;
+  font-weight: bold;
+}
+.project-link:hover {
+  background-color: #005fa3;
+}
+
     .project img {
   transition: transform 0.3s ease;
 }
@@ -126,6 +140,7 @@
         <li><a href="#about">About</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#projects">Projects</a></li>
+        <li><a href="Ahmad_Kadri_CV.pdf" target="_blank">CV</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
@@ -208,6 +223,7 @@
     <p>Email: <a href="mailto:ahmadkadri@web.de">ahmadkadri@web.de</a></p>
     <p>GitHub: <a href="https://github.com/ahmadkadri978" target="_blank">github.com/ahmadkadri978</a></p>
     <p>LinkedIn: <a href="https://linkedin.com/in/kadri-ahmad" target="_blank">linkedin.com/in/kadri-ahmad</a></p>
+    <p><a href="Ahmad_Kadri_CV.pdf" class="project-link" target="_blank">📄 Download My CV (PDF)</a></p>
   </section>
 
   <footer>
